# python-path

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
app/: __init__.py  advanced_practice.py  content.py  db.py  evaluator.py  exam_transfer.py  extended_curriculum.py  foundation_expansion.py  gentle_start.py  learning_design.py  main.py  projects.py
app/static/: app.js  index.html  styles.css
docs/: ARCHITECTURE.md  CURRICULUM.md  LEARNING_DESIGN.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: start_local_server.cmd
tests/: conftest.py  test_advanced_curriculum.py  test_api.py  test_curriculum.py  test_evaluator.py  test_learning_audit.py  test_runtime_learning.py
