[project]
name = "python-path"
version = "1.0.0"
description = "Русскоязычная Duolingo-подобная обучалка Python"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.51.0,<1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27", "pyright>=1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]
